--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.25.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.25.0",
     "eslint-config-next": "15.3.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "prisma": "^6.6.0",
     "tailwindcss": "^4",
     "typescript": "^5"
